added full 1_email_agent

--- a/1_email_agent.ipynb
+++ b/1_email_agent.ipynb
@@ -2,30 +2,236 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "fb47df6c",
+   "execution_count": 32,
+   "id": "d08a1e3a",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "**Transcendental Meditation (TM)** was developed by **Maharishi Mahesh Yogi** in the mid-20th century. He introduced the technique to the world in the 1950s and popularized it internationally during the 1960s and 1970s. While TM draws on ancient Indian meditation traditions, the specific method and its branding as \"Transcendental Meditation\" are attributed to Maharishi Mahesh Yogi.\n"
+     ]
     }
    ],
    "source": [
     "from dotenv import load_dotenv\n",
-    "load_dotenv()"
+    "import os\n",
+    "from crewai import LLM\n",
+    "\n",
+    "load_dotenv()\n",
+    "\n",
+    "llm = LLM(\n",
+    "    model=\"openai/gpt-4.1\",\n",
+    "    api_key=os.getenv(\"CHATGPT_API_KEY\"),\n",
+    "    base_url=\"https://openrouter.ai/api/v1\",\n",
+    "    custom_llm_provider=\"openrouter\", \n",
+    "    temperature=0.1,\n",
+    "    max_tokens=1000\n",
+    ")\n",
+    "\n",
+    "response = llm.call(\"Who invented transcendental meditation?\")\n",
+    "print(str(response))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "fd80d091",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[36m┌─\u001b[0m\u001b[36m─────────────────────────\u001b[0m\u001b[36m Crew Execution Started \u001b[0m\u001b[36m──────────────────────────\u001b[0m\u001b[36m─┐\u001b[0m\n",
+      "\u001b[36m│\u001b[0m                                                                             \u001b[36m│\u001b[0m\n",
+      "\u001b[36m│\u001b[0m  \u001b[1;36mCrew Execution Started\u001b[0m                                                     \u001b[36m│\u001b[0m\n",
+      "\u001b[36m│\u001b[0m  \u001b[37mName: \u001b[0m\u001b[36mcrew\u001b[0m                                                                 \u001b[36m│\u001b[0m\n",
+      "\u001b[36m│\u001b[0m  \u001b[37mID: \u001b[0m\u001b[36mbe35efd0-0a2b-431a-9abb-6dd0b91bb4ba\u001b[0m                                   \u001b[36m│\u001b[0m\n",
+      "\u001b[36m│\u001b[0m  \u001b[37mTool Args: \u001b[0m                                                                \u001b[36m│\u001b[0m\n",
+      "\u001b[36m│\u001b[0m                                                                             \u001b[36m│\u001b[0m\n",
+      "\u001b[36m│\u001b[0m                                                                             \u001b[36m│\u001b[0m\n",
+      "\u001b[36m└─────────────────────────────────────────────────────────────────────────────┘\u001b[0m\n",
+      "\n",
+      "\u001b[?25l\u001b[1;36m🚀 Crew: \u001b[0m\u001b[1;36mcrew\u001b[0m\n",
+      "└── \u001b[1;33m📋 Task: b8f60c3e-4b87-4d63-be01-aa11b0bdcb4e\u001b[0m\n",
+      "    \u001b[37mStatus: \u001b[0m\u001b[2;33mExecuting Task...\u001b[0m\n",
+      "\u001b[?25h\u001b[35m┌─\u001b[0m\u001b[35m────────────────────────────\u001b[0m\u001b[35m 🤖 Agent Started \u001b[0m\u001b[35m─────────────────────────────\u001b[0m\u001b[35m─┐\u001b[0m\n",
+      "\u001b[35m│\u001b[0m                                                                             \u001b[35m│\u001b[0m\n",
+      "\u001b[35m│\u001b[0m  \u001b[37mAgent: \u001b[0m\u001b[1;92mEmail Assistant\u001b[0m                                                     \u001b[35m│\u001b[0m\n",
+      "\u001b[35m│\u001b[0m                                                                             \u001b[35m│\u001b[0m\n",
+      "\u001b[35m│\u001b[0m  \u001b[37mTask: \u001b[0m\u001b[92mTake the following rough email and rewrite it into a professional \u001b[0m   \u001b[35m│\u001b[0m\n",
+      "\u001b[35m│\u001b[0m  \u001b[92mand polished version.\u001b[0m                                                      \u001b[35m│\u001b[0m\n",
+      "\u001b[35m│\u001b[0m  \u001b[92m    Expand abbreviations:\u001b[0m                                                  \u001b[35m│\u001b[0m\n",
+      "\u001b[35m│\u001b[0m  \u001b[92m    '''hey team, just wanted to tell u that the demo is kind of ready, \u001b[0m    \u001b[35m│\u001b[0m\n",
+      "\u001b[35m│\u001b[0m  \u001b[92mbut there's still stuff left. Maybe we can show what we have and say rest\u001b[0m  \u001b[35m│\u001b[0m\n",
+      "\u001b[35m│\u001b[0m  \u001b[92mis WIP. Let me know what u think. thanks'''\u001b[0m                                \u001b[35m│\u001b[0m\n",
+      "\u001b[35m│\u001b[0m                                                                             \u001b[35m│\u001b[0m\n",
+      "\u001b[35m└─────────────────────────────────────────────────────────────────────────────┘\u001b[0m\n",
+      "\n",
+      "\u001b[?25l"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1;36m🚀 Crew: \u001b[0m\u001b[1;36mcrew\u001b[0m\n",
+      "└── \u001b[1;33m📋 Task: b8f60c3e-4b87-4d63-be01-aa11b0bdcb4e\u001b[0m\n",
+      "    \u001b[37mStatus: \u001b[0m\u001b[2;33mExecuting Task...\u001b[0m\n",
+      "\u001b[2K\u001b[1A\u001b[2K\u001b[1A\u001b[2K\u001b[1A\u001b[2K\u001b[1;36m🚀 Crew: \u001b[0m\u001b[1;36mcrew\u001b[0m\n",
+      "└── \u001b[1;33m📋 Task: b8f60c3e-4b87-4d63-be01-aa11b0bdcb4e\u001b[0m\n",
+      "    \u001b[37mStatus: \u001b[0m\u001b[2;33mExecuting Task...\u001b[0m\n",
+      "\u001b[2K\u001b[1A\u001b[2K\u001b[1A\u001b[2K\u001b[1A\u001b[2K\u001b[1;36m🚀 Crew: \u001b[0m\u001b[1;36mcrew\u001b[0m\n",
+      "└── \u001b[1;33m📋 Task: b8f60c3e-4b87-4d63-be01-aa11b0bdcb4e\u001b[0m\n",
+      "    \u001b[37mStatus: \u001b[0m\u001b[2;33mExecuting Task...\u001b[0m\n",
+      "\u001b[2K\u001b[1A\u001b[2K\u001b[1A\u001b[2K\u001b[1A\u001b[2K\u001b[1;36m🚀 Crew: \u001b[0m\u001b[1;36mcrew\u001b[0m\n",
+      "└── \u001b[1;33m📋 Task: b8f60c3e-4b87-4d63-be01-aa11b0bdcb4e\u001b[0m\n",
+      "    \u001b[37mStatus: \u001b[0m\u001b[2;33mExecuting Task...\u001b[0m\n",
+      "\u001b[2K\u001b[1A\u001b[2K\u001b[1A\u001b[2K\u001b[1A\u001b[2K\u001b[1;36m🚀 Crew: \u001b[0m\u001b[1;36mcrew\u001b[0m\n",
+      "└── \u001b[1;33m📋 Task: b8f60c3e-4b87-4d63-be01-aa11b0bdcb4e\u001b[0m\n",
+      "    \u001b[37mStatus: \u001b[0m\u001b[2;33mExecuting Task...\u001b[0m\n",
+      "\u001b[2K\u001b[1A\u001b[2K\u001b[1A\u001b[2K\u001b[1A\u001b[2K\u001b[1;36m🚀 Crew: \u001b[0m\u001b[1;36mcrew\u001b[0m\n",
+      "└── \u001b[1;33m📋 Task: b8f60c3e-4b87-4d63-be01-aa11b0bdcb4e\u001b[0m\n",
+      "    \u001b[37mStatus: \u001b[0m\u001b[2;33mExecuting Task...\u001b[0m\n",
+      "\u001b[2K\u001b[1A\u001b[2K\u001b[1A\u001b[2K\u001b[1A\u001b[2K\u001b[1;36m🚀 Crew: \u001b[0m\u001b[1;36mcrew\u001b[0m\n",
+      "└── \u001b[1;33m📋 Task: b8f60c3e-4b87-4d63-be01-aa11b0bdcb4e\u001b[0m\n",
+      "    \u001b[37mStatus: \u001b[0m\u001b[2;33mExecuting Task...\u001b[0m\n",
+      "\u001b[2K\u001b[1A\u001b[2K\u001b[1A\u001b[2K\u001b[1A\u001b[2K\u001b[1;36m🚀 Crew: \u001b[0m\u001b[1;36mcrew\u001b[0m\n",
+      "└── \u001b[1;33m📋 Task: b8f60c3e-4b87-4d63-be01-aa11b0bdcb4e\u001b[0m\n",
+      "    \u001b[37mStatus: \u001b[0m\u001b[2;33mExecuting Task...\u001b[0m\n",
+      "\u001b[2K\u001b[1A\u001b[2K\u001b[1A\u001b[2K\u001b[1A\u001b[2K\u001b[1;36m🚀 Crew: \u001b[0m\u001b[1;36mcrew\u001b[0m\n",
+      "└── \u001b[1;33m📋 Task: b8f60c3e-4b87-4d63-be01-aa11b0bdcb4e\u001b[0m\n",
+      "    \u001b[37mStatus: \u001b[0m\u001b[2;33mExecuting Task...\u001b[0m\n",
+      "\u001b[2K\u001b[1A\u001b[2K\u001b[1A\u001b[2K\u001b[1A\u001b[2K\u001b[1;36m🚀 Crew: \u001b[0m\u001b[1;36mcrew\u001b[0m\n",
+      "└── \u001b[1;33m📋 Task: b8f60c3e-4b87-4d63-be01-aa11b0bdcb4e\u001b[0m\n",
+      "    \u001b[37mStatus: \u001b[0m\u001b[2;33mExecuting Task...\u001b[0m\n",
+      "\u001b[2K\u001b[1A\u001b[2K\u001b[1A\u001b[2K\u001b[1A\u001b[2K\u001b[1;36m🚀 Crew: \u001b[0m\u001b[1;36mcrew\u001b[0m\n",
+      "└── \u001b[1;33m📋 Task: b8f60c3e-4b87-4d63-be01-aa11b0bdcb4e\u001b[0m\n",
+      "    \u001b[37mStatus: \u001b[0m\u001b[2;33mExecuting Task...\u001b[0m\n",
+      "\u001b[2K\u001b[1A\u001b[2K\u001b[1A\u001b[2K\u001b[1A\u001b[2K\u001b[1;36m🚀 Crew: \u001b[0m\u001b[1;36mcrew\u001b[0m\n",
+      "└── \u001b[1;33m📋 Task: b8f60c3e-4b87-4d63-be01-aa11b0bdcb4e\u001b[0m\n",
+      "    \u001b[37mStatus: \u001b[0m\u001b[2;33mExecuting Task...\u001b[0m\n",
+      "\u001b[2K\u001b[1A\u001b[2K\u001b[1A\u001b[2K\u001b[1A\u001b[2K\u001b[1;36m🚀 Crew: \u001b[0m\u001b[1;36mcrew\u001b[0m\n",
+      "└── \u001b[1;33m📋 Task: b8f60c3e-4b87-4d63-be01-aa11b0bdcb4e\u001b[0m\n",
+      "\u001b[2K\u001b[1A\u001b[2K\u001b[1A\u001b[2K\u001b[1;36m🚀 Crew: \u001b[0m\u001b[1;36mcrew\u001b[0m\n",
+      "└── \u001b[1;33m📋 Task: b8f60c3e-4b87-4d63-be01-aa11b0bdcb4e\u001b[0m\n",
+      "    \u001b[37mStatus: \u001b[0m\u001b[2;33mExecuting Task...\u001b[0m\n",
+      "\u001b[?25h\u001b[32m┌─\u001b[0m\u001b[32m──────────────────────────\u001b[0m\u001b[32m ✅ Agent Final Answer \u001b[0m\u001b[32m──────────────────────────\u001b[0m\u001b[32m─┐\u001b[0m\n",
+      "\u001b[32m│\u001b[0m                                                                             \u001b[32m│\u001b[0m\n",
+      "\u001b[32m│\u001b[0m  \u001b[37mAgent: \u001b[0m\u001b[1;92mEmail Assistant\u001b[0m                                                     \u001b[32m│\u001b[0m\n",
+      "\u001b[32m│\u001b[0m                                                                             \u001b[32m│\u001b[0m\n",
+      "\u001b[32m│\u001b[0m  \u001b[37mFinal Answer:\u001b[0m                                                              \u001b[32m│\u001b[0m\n",
+      "\u001b[32m│\u001b[0m  \u001b[92mSubject: Demo Progress Update\u001b[0m                                              \u001b[32m│\u001b[0m\n",
+      "\u001b[32m│\u001b[0m                                                                             \u001b[32m│\u001b[0m\n",
+      "\u001b[32m│\u001b[0m  \u001b[92mDear Team,\u001b[0m                                                                 \u001b[32m│\u001b[0m\n",
+      "\u001b[32m│\u001b[0m                                                                             \u001b[32m│\u001b[0m\n",
+      "\u001b[32m│\u001b[0m  \u001b[92mI wanted to provide an update regarding the status of the demo. The \u001b[0m       \u001b[32m│\u001b[0m\n",
+      "\u001b[32m│\u001b[0m  \u001b[92mdemonstration is partially ready; however, there are still some \u001b[0m           \u001b[32m│\u001b[0m\n",
+      "\u001b[32m│\u001b[0m  \u001b[92mcomponents that are in progress. \u001b[0m                                          \u001b[32m│\u001b[0m\n",
+      "\u001b[32m│\u001b[0m                                                                             \u001b[32m│\u001b[0m\n",
+      "\u001b[32m│\u001b[0m  \u001b[92mI suggest that we present the completed sections as they currently stand \u001b[0m  \u001b[32m│\u001b[0m\n",
+      "\u001b[32m│\u001b[0m  \u001b[92mand communicate that the remaining features are still a work in progress.\u001b[0m  \u001b[32m│\u001b[0m\n",
+      "\u001b[32m│\u001b[0m  \u001b[92mPlease let me know your thoughts on this approach.\u001b[0m                         \u001b[32m│\u001b[0m\n",
+      "\u001b[32m│\u001b[0m                                                                             \u001b[32m│\u001b[0m\n",
+      "\u001b[32m│\u001b[0m  \u001b[92mThank you for your attention.\u001b[0m                                              \u001b[32m│\u001b[0m\n",
+      "\u001b[32m│\u001b[0m                                                                             \u001b[32m│\u001b[0m\n",
+      "\u001b[32m│\u001b[0m  \u001b[92mBest regards,  \u001b[0m                                                            \u001b[32m│\u001b[0m\n",
+      "\u001b[32m│\u001b[0m  \u001b[92m[Your Name]\u001b[0m                                                                \u001b[32m│\u001b[0m\n",
+      "\u001b[32m│\u001b[0m                                                                             \u001b[32m│\u001b[0m\n",
+      "\u001b[32m└─────────────────────────────────────────────────────────────────────────────┘\u001b[0m\n",
+      "\n",
+      "\u001b[?25l\u001b[1;36m🚀 Crew: \u001b[0m\u001b[1;36mcrew\u001b[0m\n",
+      "└── \u001b[1;32m📋 Task: b8f60c3e-4b87-4d63-be01-aa11b0bdcb4e\u001b[0m\n",
+      "    \u001b[37mAssigned to: \u001b[0m\u001b[32mEmail Assistant\u001b[0m\n",
+      "    \u001b[37mStatus: \u001b[0m\u001b[1;32m✅ Completed\u001b[0m\n",
+      "\u001b[?25h\u001b[32m┌─\u001b[0m\u001b[32m─────────────────────────────\u001b[0m\u001b[32m Task Completion \u001b[0m\u001b[32m─────────────────────────────\u001b[0m\u001b[32m─┐\u001b[0m\n",
+      "\u001b[32m│\u001b[0m                                                                             \u001b[32m│\u001b[0m\n",
+      "\u001b[32m│\u001b[0m  \u001b[1;32mTask Completed\u001b[0m                                                             \u001b[32m│\u001b[0m\n",
+      "\u001b[32m│\u001b[0m  \u001b[37mName: \u001b[0m\u001b[32mb8f60c3e-4b87-4d63-be01-aa11b0bdcb4e\u001b[0m                                 \u001b[32m│\u001b[0m\n",
+      "\u001b[32m│\u001b[0m  \u001b[37mAgent: \u001b[0m\u001b[32mEmail Assistant\u001b[0m                                                     \u001b[32m│\u001b[0m\n",
+      "\u001b[32m│\u001b[0m  \u001b[37mTool Args: \u001b[0m                                                                \u001b[32m│\u001b[0m\n",
+      "\u001b[32m│\u001b[0m                                                                             \u001b[32m│\u001b[0m\n",
+      "\u001b[32m│\u001b[0m                                                                             \u001b[32m│\u001b[0m\n",
+      "\u001b[32m└─────────────────────────────────────────────────────────────────────────────┘\u001b[0m\n",
+      "\n",
+      "\u001b[32m┌─\u001b[0m\u001b[32m─────────────────────────────\u001b[0m\u001b[32m Crew Completion \u001b[0m\u001b[32m─────────────────────────────\u001b[0m\u001b[32m─┐\u001b[0m\n",
+      "\u001b[32m│\u001b[0m                                                                             \u001b[32m│\u001b[0m\n",
+      "\u001b[32m│\u001b[0m  \u001b[1;32mCrew Execution Completed\u001b[0m                                                   \u001b[32m│\u001b[0m\n",
+      "\u001b[32m│\u001b[0m  \u001b[37mName: \u001b[0m\u001b[32mcrew\u001b[0m                                                                 \u001b[32m│\u001b[0m\n",
+      "\u001b[32m│\u001b[0m  \u001b[37mID: \u001b[0m\u001b[32mbe35efd0-0a2b-431a-9abb-6dd0b91bb4ba\u001b[0m                                   \u001b[32m│\u001b[0m\n",
+      "\u001b[32m│\u001b[0m  \u001b[37mTool Args: \u001b[0m                                                                \u001b[32m│\u001b[0m\n",
+      "\u001b[32m│\u001b[0m  \u001b[37mFinal Output: Subject: Demo Progress Update\u001b[0m                                \u001b[32m│\u001b[0m\n",
+      "\u001b[32m│\u001b[0m                                                                             \u001b[32m│\u001b[0m\n",
+      "\u001b[32m│\u001b[0m  \u001b[37mDear Team,\u001b[0m                                                                 \u001b[32m│\u001b[0m\n",
+      "\u001b[32m│\u001b[0m                                                                             \u001b[32m│\u001b[0m\n",
+      "\u001b[32m│\u001b[0m  \u001b[37mI wanted to provide an update regarding the status of the demo. The \u001b[0m       \u001b[32m│\u001b[0m\n",
+      "\u001b[32m│\u001b[0m  \u001b[37mdemonstration is partially ready; however, there are still some \u001b[0m           \u001b[32m│\u001b[0m\n",
+      "\u001b[32m│\u001b[0m  \u001b[37mcomponents that are in progress. \u001b[0m                                          \u001b[32m│\u001b[0m\n",
+      "\u001b[32m│\u001b[0m                                                                             \u001b[32m│\u001b[0m\n",
+      "\u001b[32m│\u001b[0m  \u001b[37mI suggest that we present the completed sections as they currently stand \u001b[0m  \u001b[32m│\u001b[0m\n",
+      "\u001b[32m│\u001b[0m  \u001b[37mand communicate that the remaining features are still a work in progress.\u001b[0m  \u001b[32m│\u001b[0m\n",
+      "\u001b[32m│\u001b[0m  \u001b[37mPlease let me know your thoughts on this approach.\u001b[0m                         \u001b[32m│\u001b[0m\n",
+      "\u001b[32m│\u001b[0m                                                                             \u001b[32m│\u001b[0m\n",
+      "\u001b[32m│\u001b[0m  \u001b[37mThank you for your attention.\u001b[0m                                              \u001b[32m│\u001b[0m\n",
+      "\u001b[32m│\u001b[0m                                                                             \u001b[32m│\u001b[0m\n",
+      "\u001b[32m│\u001b[0m  \u001b[37mBest regards,  \u001b[0m                                                            \u001b[32m│\u001b[0m\n",
+      "\u001b[32m│\u001b[0m  \u001b[37m[Your Name]\u001b[0m                                                                \u001b[32m│\u001b[0m\n",
+      "\u001b[32m│\u001b[0m                                                                             \u001b[32m│\u001b[0m\n",
+      "\u001b[32m│\u001b[0m                                                                             \u001b[32m│\u001b[0m\n",
+      "\u001b[32m└─────────────────────────────────────────────────────────────────────────────┘\u001b[0m\n",
+      "\n",
+      "Subject: Demo Progress Update\n",
+      "\n",
+      "Dear Team,\n",
+      "\n",
+      "I wanted to provide an update regarding the status of the demo. The demonstration is partially ready; however, there are still some components that are in progress. \n",
+      "\n",
+      "I suggest that we present the completed sections as they currently stand and communicate that the remaining features are still a work in progress. Please let me know your thoughts on this approach.\n",
+      "\n",
+      "Thank you for your attention.\n",
+      "\n",
+      "Best regards,  \n",
+      "[Your Name]\n"
+     ]
+    }
+   ],
+   "source": [
+    "from crewai import Crew, Agent, Task\n",
+    "\n",
+    "email_assistant = Agent(\n",
+    "    role=\"Email Assistant\", \n",
+    "    goal=\"Improve emails and make them sound professional and clear\",\n",
+    "    backstory=\"A highly experienced communication expert skilled in professional email writing\",\n",
+    "    verbose=True,\n",
+    "    llm=llm\n",
+    ")\n",
+    "\n",
+    "original_email = \"hey team, just wanted to tell u that the demo is kind of ready, but there's still stuff left. Maybe we can show what we have and say rest is WIP. Let me know what u think. thanks\"\n",
+    "\n",
+    "email_task = Task(\n",
+    "    description=f\"\"\"Take the following rough email and rewrite it into a professional and polished version.\n",
+    "    Expand abbreviations:\n",
+    "    '''{original_email}'''\"\"\",\n",
+    "    agent=email_assistant,\n",
+    "    expected_output=\"A professional written email with proper formatting and content.\",\n",
+    ")\n",
+    "\n",
+    "crew = Crew(\n",
+    "    agents=[email_assistant],\n",
+    "    tasks=[email_task],\n",
+    "    verbose=True\n",
+    ")\n",
+    "\n",
+    "result = crew.kickoff()\n",
+    "print(result)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d08a1e3a",
+   "id": "294ebf7b",
    "metadata": {},
    "outputs": [],
    "source": []
