--- a/1_email_agent.ipynb
+++ b/1_email_agent.ipynb
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 40,
    "id": "fd80d091",
    "metadata": {},
    "outputs": [
@@ -48,14 +48,14 @@
       "\u001b[36m│\u001b[0m                                                                             \u001b[36m│\u001b[0m\n",
       "\u001b[36m│\u001b[0m  \u001b[1;36mCrew Execution Started\u001b[0m                                                     \u001b[36m│\u001b[0m\n",
       "\u001b[36m│\u001b[0m  \u001b[37mName: \u001b[0m\u001b[36mcrew\u001b[0m                                                                 \u001b[36m│\u001b[0m\n",
-      "\u001b[36m│\u001b[0m  \u001b[37mID: \u001b[0m\u001b[36mbe35efd0-0a2b-431a-9abb-6dd0b91bb4ba\u001b[0m                                   \u001b[36m│\u001b[0m\n",
+      "\u001b[36m│\u001b[0m  \u001b[37mID: \u001b[0m\u001b[36mc1e68f31-7bb6-4ce1-b2b6-e922407a16ae\u001b[0m                                   \u001b[36m│\u001b[0m\n",
       "\u001b[36m│\u001b[0m  \u001b[37mTool Args: \u001b[0m                                                                \u001b[36m│\u001b[0m\n",
       "\u001b[36m│\u001b[0m                                                                             \u001b[36m│\u001b[0m\n",
       "\u001b[36m│\u001b[0m                                                                             \u001b[36m│\u001b[0m\n",
       "\u001b[36m└─────────────────────────────────────────────────────────────────────────────┘\u001b[0m\n",
       "\n",
       "\u001b[?25l\u001b[1;36m🚀 Crew: \u001b[0m\u001b[1;36mcrew\u001b[0m\n",
-      "└── \u001b[1;33m📋 Task: b8f60c3e-4b87-4d63-be01-aa11b0bdcb4e\u001b[0m\n",
+      "└── \u001b[1;33m📋 Task: def57fc0-0918-4212-be76-505865d76dd4\u001b[0m\n",
       "    \u001b[37mStatus: \u001b[0m\u001b[2;33mExecuting Task...\u001b[0m\n",
       "\u001b[?25h\u001b[35m┌─\u001b[0m\u001b[35m────────────────────────────\u001b[0m\u001b[35m 🤖 Agent Started \u001b[0m\u001b[35m─────────────────────────────\u001b[0m\u001b[35m─┐\u001b[0m\n",
       "\u001b[35m│\u001b[0m                                                                             \u001b[35m│\u001b[0m\n",
@@ -70,53 +70,55 @@
       "\u001b[35m│\u001b[0m                                                                             \u001b[35m│\u001b[0m\n",
       "\u001b[35m└─────────────────────────────────────────────────────────────────────────────┘\u001b[0m\n",
       "\n",
-      "\u001b[?25l"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\u001b[1;36m🚀 Crew: \u001b[0m\u001b[1;36mcrew\u001b[0m\n",
-      "└── \u001b[1;33m📋 Task: b8f60c3e-4b87-4d63-be01-aa11b0bdcb4e\u001b[0m\n",
+      "\u001b[?25l\u001b[1;36m🚀 Crew: \u001b[0m\u001b[1;36mcrew\u001b[0m\n",
+      "└── \u001b[1;33m📋 Task: def57fc0-0918-4212-be76-505865d76dd4\u001b[0m\n",
       "    \u001b[37mStatus: \u001b[0m\u001b[2;33mExecuting Task...\u001b[0m\n",
       "\u001b[2K\u001b[1A\u001b[2K\u001b[1A\u001b[2K\u001b[1A\u001b[2K\u001b[1;36m🚀 Crew: \u001b[0m\u001b[1;36mcrew\u001b[0m\n",
-      "└── \u001b[1;33m📋 Task: b8f60c3e-4b87-4d63-be01-aa11b0bdcb4e\u001b[0m\n",
+      "└── \u001b[1;33m📋 Task: def57fc0-0918-4212-be76-505865d76dd4\u001b[0m\n",
       "    \u001b[37mStatus: \u001b[0m\u001b[2;33mExecuting Task...\u001b[0m\n",
       "\u001b[2K\u001b[1A\u001b[2K\u001b[1A\u001b[2K\u001b[1A\u001b[2K\u001b[1;36m🚀 Crew: \u001b[0m\u001b[1;36mcrew\u001b[0m\n",
-      "└── \u001b[1;33m📋 Task: b8f60c3e-4b87-4d63-be01-aa11b0bdcb4e\u001b[0m\n",
+      "└── \u001b[1;33m📋 Task: def57fc0-0918-4212-be76-505865d76dd4\u001b[0m\n",
       "    \u001b[37mStatus: \u001b[0m\u001b[2;33mExecuting Task...\u001b[0m\n",
       "\u001b[2K\u001b[1A\u001b[2K\u001b[1A\u001b[2K\u001b[1A\u001b[2K\u001b[1;36m🚀 Crew: \u001b[0m\u001b[1;36mcrew\u001b[0m\n",
-      "└── \u001b[1;33m📋 Task: b8f60c3e-4b87-4d63-be01-aa11b0bdcb4e\u001b[0m\n",
+      "└── \u001b[1;33m📋 Task: def57fc0-0918-4212-be76-505865d76dd4\u001b[0m\n",
       "    \u001b[37mStatus: \u001b[0m\u001b[2;33mExecuting Task...\u001b[0m\n",
       "\u001b[2K\u001b[1A\u001b[2K\u001b[1A\u001b[2K\u001b[1A\u001b[2K\u001b[1;36m🚀 Crew: \u001b[0m\u001b[1;36mcrew\u001b[0m\n",
-      "└── \u001b[1;33m📋 Task: b8f60c3e-4b87-4d63-be01-aa11b0bdcb4e\u001b[0m\n",
+      "└── \u001b[1;33m📋 Task: def57fc0-0918-4212-be76-505865d76dd4\u001b[0m\n",
       "    \u001b[37mStatus: \u001b[0m\u001b[2;33mExecuting Task...\u001b[0m\n",
       "\u001b[2K\u001b[1A\u001b[2K\u001b[1A\u001b[2K\u001b[1A\u001b[2K\u001b[1;36m🚀 Crew: \u001b[0m\u001b[1;36mcrew\u001b[0m\n",
-      "└── \u001b[1;33m📋 Task: b8f60c3e-4b87-4d63-be01-aa11b0bdcb4e\u001b[0m\n",
+      "└── \u001b[1;33m📋 Task: def57fc0-0918-4212-be76-505865d76dd4\u001b[0m\n",
       "    \u001b[37mStatus: \u001b[0m\u001b[2;33mExecuting Task...\u001b[0m\n",
       "\u001b[2K\u001b[1A\u001b[2K\u001b[1A\u001b[2K\u001b[1A\u001b[2K\u001b[1;36m🚀 Crew: \u001b[0m\u001b[1;36mcrew\u001b[0m\n",
-      "└── \u001b[1;33m📋 Task: b8f60c3e-4b87-4d63-be01-aa11b0bdcb4e\u001b[0m\n",
+      "└── \u001b[1;33m📋 Task: def57fc0-0918-4212-be76-505865d76dd4\u001b[0m\n",
       "    \u001b[37mStatus: \u001b[0m\u001b[2;33mExecuting Task...\u001b[0m\n",
       "\u001b[2K\u001b[1A\u001b[2K\u001b[1A\u001b[2K\u001b[1A\u001b[2K\u001b[1;36m🚀 Crew: \u001b[0m\u001b[1;36mcrew\u001b[0m\n",
-      "└── \u001b[1;33m📋 Task: b8f60c3e-4b87-4d63-be01-aa11b0bdcb4e\u001b[0m\n",
+      "└── \u001b[1;33m📋 Task: def57fc0-0918-4212-be76-505865d76dd4\u001b[0m\n",
       "    \u001b[37mStatus: \u001b[0m\u001b[2;33mExecuting Task...\u001b[0m\n",
       "\u001b[2K\u001b[1A\u001b[2K\u001b[1A\u001b[2K\u001b[1A\u001b[2K\u001b[1;36m🚀 Crew: \u001b[0m\u001b[1;36mcrew\u001b[0m\n",
-      "└── \u001b[1;33m📋 Task: b8f60c3e-4b87-4d63-be01-aa11b0bdcb4e\u001b[0m\n",
+      "└── \u001b[1;33m📋 Task: def57fc0-0918-4212-be76-505865d76dd4\u001b[0m\n",
       "    \u001b[37mStatus: \u001b[0m\u001b[2;33mExecuting Task...\u001b[0m\n",
       "\u001b[2K\u001b[1A\u001b[2K\u001b[1A\u001b[2K\u001b[1A\u001b[2K\u001b[1;36m🚀 Crew: \u001b[0m\u001b[1;36mcrew\u001b[0m\n",
-      "└── \u001b[1;33m📋 Task: b8f60c3e-4b87-4d63-be01-aa11b0bdcb4e\u001b[0m\n",
+      "└── \u001b[1;33m📋 Task: def57fc0-0918-4212-be76-505865d76dd4\u001b[0m\n",
       "    \u001b[37mStatus: \u001b[0m\u001b[2;33mExecuting Task...\u001b[0m\n",
       "\u001b[2K\u001b[1A\u001b[2K\u001b[1A\u001b[2K\u001b[1A\u001b[2K\u001b[1;36m🚀 Crew: \u001b[0m\u001b[1;36mcrew\u001b[0m\n",
-      "└── \u001b[1;33m📋 Task: b8f60c3e-4b87-4d63-be01-aa11b0bdcb4e\u001b[0m\n",
+      "└── \u001b[1;33m📋 Task: def57fc0-0918-4212-be76-505865d76dd4\u001b[0m\n",
       "    \u001b[37mStatus: \u001b[0m\u001b[2;33mExecuting Task...\u001b[0m\n",
       "\u001b[2K\u001b[1A\u001b[2K\u001b[1A\u001b[2K\u001b[1A\u001b[2K\u001b[1;36m🚀 Crew: \u001b[0m\u001b[1;36mcrew\u001b[0m\n",
-      "└── \u001b[1;33m📋 Task: b8f60c3e-4b87-4d63-be01-aa11b0bdcb4e\u001b[0m\n",
+      "└── \u001b[1;33m📋 Task: def57fc0-0918-4212-be76-505865d76dd4\u001b[0m\n",
       "    \u001b[37mStatus: \u001b[0m\u001b[2;33mExecuting Task...\u001b[0m\n",
       "\u001b[2K\u001b[1A\u001b[2K\u001b[1A\u001b[2K\u001b[1A\u001b[2K\u001b[1;36m🚀 Crew: \u001b[0m\u001b[1;36mcrew\u001b[0m\n",
-      "└── \u001b[1;33m📋 Task: b8f60c3e-4b87-4d63-be01-aa11b0bdcb4e\u001b[0m\n",
+      "└── \u001b[1;33m📋 Task: def57fc0-0918-4212-be76-505865d76dd4\u001b[0m\n",
+      "    \u001b[37mStatus: \u001b[0m\u001b[2;33mExecuting Task...\u001b[0m\n",
+      "\u001b[2K\u001b[1A\u001b[2K\u001b[1A\u001b[2K\u001b[1A\u001b[2K\u001b[1;36m🚀 Crew: \u001b[0m\u001b[1;36mcrew\u001b[0m\n",
+      "└── \u001b[1;33m📋 Task: def57fc0-0918-4212-be76-505865d76dd4\u001b[0m\n",
+      "    \u001b[37mStatus: \u001b[0m\u001b[2;33mExecuting Task...\u001b[0m\n",
+      "\u001b[2K\u001b[1A\u001b[2K\u001b[1A\u001b[2K\u001b[1A\u001b[2K\u001b[1;36m🚀 Crew: \u001b[0m\u001b[1;36mcrew\u001b[0m\n",
+      "└── \u001b[1;33m📋 Task: def57fc0-0918-4212-be76-505865d76dd4\u001b[0m\n",
+      "    \u001b[37mStatus: \u001b[0m\u001b[2;33mExecuting Task...\u001b[0m\n",
+      "\u001b[2K\u001b[1A\u001b[2K\u001b[1A\u001b[2K\u001b[1A\u001b[2K\u001b[1;36m🚀 Crew: \u001b[0m\u001b[1;36mcrew\u001b[0m\n",
+      "└── \u001b[1;33m📋 Task: def57fc0-0918-4212-be76-505865d76dd4\u001b[0m\n",
       "\u001b[2K\u001b[1A\u001b[2K\u001b[1A\u001b[2K\u001b[1;36m🚀 Crew: \u001b[0m\u001b[1;36mcrew\u001b[0m\n",
-      "└── \u001b[1;33m📋 Task: b8f60c3e-4b87-4d63-be01-aa11b0bdcb4e\u001b[0m\n",
+      "└── \u001b[1;33m📋 Task: def57fc0-0918-4212-be76-505865d76dd4\u001b[0m\n",
       "    \u001b[37mStatus: \u001b[0m\u001b[2;33mExecuting Task...\u001b[0m\n",
       "\u001b[?25h\u001b[32m┌─\u001b[0m\u001b[32m──────────────────────────\u001b[0m\u001b[32m ✅ Agent Final Answer \u001b[0m\u001b[32m──────────────────────────\u001b[0m\u001b[32m─┐\u001b[0m\n",
       "\u001b[32m│\u001b[0m                                                                             \u001b[32m│\u001b[0m\n",
@@ -127,13 +129,13 @@
       "\u001b[32m│\u001b[0m                                                                             \u001b[32m│\u001b[0m\n",
       "\u001b[32m│\u001b[0m  \u001b[92mDear Team,\u001b[0m                                                                 \u001b[32m│\u001b[0m\n",
       "\u001b[32m│\u001b[0m                                                                             \u001b[32m│\u001b[0m\n",
-      "\u001b[32m│\u001b[0m  \u001b[92mI wanted to provide an update regarding the status of the demo. The \u001b[0m       \u001b[32m│\u001b[0m\n",
-      "\u001b[32m│\u001b[0m  \u001b[92mdemonstration is partially ready; however, there are still some \u001b[0m           \u001b[32m│\u001b[0m\n",
-      "\u001b[32m│\u001b[0m  \u001b[92mcomponents that are in progress. \u001b[0m                                          \u001b[32m│\u001b[0m\n",
+      "\u001b[32m│\u001b[0m  \u001b[92mI wanted to provide an update regarding the status of our demo. The demo \u001b[0m  \u001b[32m│\u001b[0m\n",
+      "\u001b[32m│\u001b[0m  \u001b[92mis partially ready; however, there are still some components that are \u001b[0m     \u001b[32m│\u001b[0m\n",
+      "\u001b[32m│\u001b[0m  \u001b[92mcurrently a work in progress.\u001b[0m                                              \u001b[32m│\u001b[0m\n",
       "\u001b[32m│\u001b[0m                                                                             \u001b[32m│\u001b[0m\n",
-      "\u001b[32m│\u001b[0m  \u001b[92mI suggest that we present the completed sections as they currently stand \u001b[0m  \u001b[32m│\u001b[0m\n",
-      "\u001b[32m│\u001b[0m  \u001b[92mand communicate that the remaining features are still a work in progress.\u001b[0m  \u001b[32m│\u001b[0m\n",
-      "\u001b[32m│\u001b[0m  \u001b[92mPlease let me know your thoughts on this approach.\u001b[0m                         \u001b[32m│\u001b[0m\n",
+      "\u001b[32m│\u001b[0m  \u001b[92mI suggest that we present the sections that are complete and clearly \u001b[0m      \u001b[32m│\u001b[0m\n",
+      "\u001b[32m│\u001b[0m  \u001b[92mcommunicate which parts are still under development. Please let me know \u001b[0m   \u001b[32m│\u001b[0m\n",
+      "\u001b[32m│\u001b[0m  \u001b[92myour thoughts on this approach.\u001b[0m                                            \u001b[32m│\u001b[0m\n",
       "\u001b[32m│\u001b[0m                                                                             \u001b[32m│\u001b[0m\n",
       "\u001b[32m│\u001b[0m  \u001b[92mThank you for your attention.\u001b[0m                                              \u001b[32m│\u001b[0m\n",
       "\u001b[32m│\u001b[0m                                                                             \u001b[32m│\u001b[0m\n",
@@ -143,13 +145,13 @@
       "\u001b[32m└─────────────────────────────────────────────────────────────────────────────┘\u001b[0m\n",
       "\n",
       "\u001b[?25l\u001b[1;36m🚀 Crew: \u001b[0m\u001b[1;36mcrew\u001b[0m\n",
-      "└── \u001b[1;32m📋 Task: b8f60c3e-4b87-4d63-be01-aa11b0bdcb4e\u001b[0m\n",
+      "└── \u001b[1;32m📋 Task: def57fc0-0918-4212-be76-505865d76dd4\u001b[0m\n",
       "    \u001b[37mAssigned to: \u001b[0m\u001b[32mEmail Assistant\u001b[0m\n",
       "    \u001b[37mStatus: \u001b[0m\u001b[1;32m✅ Completed\u001b[0m\n",
       "\u001b[?25h\u001b[32m┌─\u001b[0m\u001b[32m─────────────────────────────\u001b[0m\u001b[32m Task Completion \u001b[0m\u001b[32m─────────────────────────────\u001b[0m\u001b[32m─┐\u001b[0m\n",
       "\u001b[32m│\u001b[0m                                                                             \u001b[32m│\u001b[0m\n",
       "\u001b[32m│\u001b[0m  \u001b[1;32mTask Completed\u001b[0m                                                             \u001b[32m│\u001b[0m\n",
-      "\u001b[32m│\u001b[0m  \u001b[37mName: \u001b[0m\u001b[32mb8f60c3e-4b87-4d63-be01-aa11b0bdcb4e\u001b[0m                                 \u001b[32m│\u001b[0m\n",
+      "\u001b[32m│\u001b[0m  \u001b[37mName: \u001b[0m\u001b[32mdef57fc0-0918-4212-be76-505865d76dd4\u001b[0m                                 \u001b[32m│\u001b[0m\n",
       "\u001b[32m│\u001b[0m  \u001b[37mAgent: \u001b[0m\u001b[32mEmail Assistant\u001b[0m                                                     \u001b[32m│\u001b[0m\n",
       "\u001b[32m│\u001b[0m  \u001b[37mTool Args: \u001b[0m                                                                \u001b[32m│\u001b[0m\n",
       "\u001b[32m│\u001b[0m                                                                             \u001b[32m│\u001b[0m\n",
@@ -160,19 +162,19 @@
       "\u001b[32m│\u001b[0m                                                                             \u001b[32m│\u001b[0m\n",
       "\u001b[32m│\u001b[0m  \u001b[1;32mCrew Execution Completed\u001b[0m                                                   \u001b[32m│\u001b[0m\n",
       "\u001b[32m│\u001b[0m  \u001b[37mName: \u001b[0m\u001b[32mcrew\u001b[0m                                                                 \u001b[32m│\u001b[0m\n",
-      "\u001b[32m│\u001b[0m  \u001b[37mID: \u001b[0m\u001b[32mbe35efd0-0a2b-431a-9abb-6dd0b91bb4ba\u001b[0m                                   \u001b[32m│\u001b[0m\n",
+      "\u001b[32m│\u001b[0m  \u001b[37mID: \u001b[0m\u001b[32mc1e68f31-7bb6-4ce1-b2b6-e922407a16ae\u001b[0m                                   \u001b[32m│\u001b[0m\n",
       "\u001b[32m│\u001b[0m  \u001b[37mTool Args: \u001b[0m                                                                \u001b[32m│\u001b[0m\n",
       "\u001b[32m│\u001b[0m  \u001b[37mFinal Output: Subject: Demo Progress Update\u001b[0m                                \u001b[32m│\u001b[0m\n",
       "\u001b[32m│\u001b[0m                                                                             \u001b[32m│\u001b[0m\n",
       "\u001b[32m│\u001b[0m  \u001b[37mDear Team,\u001b[0m                                                                 \u001b[32m│\u001b[0m\n",
       "\u001b[32m│\u001b[0m                                                                             \u001b[32m│\u001b[0m\n",
-      "\u001b[32m│\u001b[0m  \u001b[37mI wanted to provide an update regarding the status of the demo. The \u001b[0m       \u001b[32m│\u001b[0m\n",
-      "\u001b[32m│\u001b[0m  \u001b[37mdemonstration is partially ready; however, there are still some \u001b[0m           \u001b[32m│\u001b[0m\n",
-      "\u001b[32m│\u001b[0m  \u001b[37mcomponents that are in progress. \u001b[0m                                          \u001b[32m│\u001b[0m\n",
+      "\u001b[32m│\u001b[0m  \u001b[37mI wanted to provide an update regarding the status of our demo. The demo \u001b[0m  \u001b[32m│\u001b[0m\n",
+      "\u001b[32m│\u001b[0m  \u001b[37mis partially ready; however, there are still some components that are \u001b[0m     \u001b[32m│\u001b[0m\n",
+      "\u001b[32m│\u001b[0m  \u001b[37mcurrently a work in progress.\u001b[0m                                              \u001b[32m│\u001b[0m\n",
       "\u001b[32m│\u001b[0m                                                                             \u001b[32m│\u001b[0m\n",
-      "\u001b[32m│\u001b[0m  \u001b[37mI suggest that we present the completed sections as they currently stand \u001b[0m  \u001b[32m│\u001b[0m\n",
-      "\u001b[32m│\u001b[0m  \u001b[37mand communicate that the remaining features are still a work in progress.\u001b[0m  \u001b[32m│\u001b[0m\n",
-      "\u001b[32m│\u001b[0m  \u001b[37mPlease let me know your thoughts on this approach.\u001b[0m                         \u001b[32m│\u001b[0m\n",
+      "\u001b[32m│\u001b[0m  \u001b[37mI suggest that we present the sections that are complete and clearly \u001b[0m      \u001b[32m│\u001b[0m\n",
+      "\u001b[32m│\u001b[0m  \u001b[37mcommunicate which parts are still under development. Please let me know \u001b[0m   \u001b[32m│\u001b[0m\n",
+      "\u001b[32m│\u001b[0m  \u001b[37myour thoughts on this approach.\u001b[0m                                            \u001b[32m│\u001b[0m\n",
       "\u001b[32m│\u001b[0m                                                                             \u001b[32m│\u001b[0m\n",
       "\u001b[32m│\u001b[0m  \u001b[37mThank you for your attention.\u001b[0m                                              \u001b[32m│\u001b[0m\n",
       "\u001b[32m│\u001b[0m                                                                             \u001b[32m│\u001b[0m\n",
@@ -186,9 +188,9 @@
       "\n",
       "Dear Team,\n",
       "\n",
-      "I wanted to provide an update regarding the status of the demo. The demonstration is partially ready; however, there are still some components that are in progress. \n",
+      "I wanted to provide an update regarding the status of our demo. The demo is partially ready; however, there are still some components that are currently a work in progress.\n",
       "\n",
-      "I suggest that we present the completed sections as they currently stand and communicate that the remaining features are still a work in progress. Please let me know your thoughts on this approach.\n",
+      "I suggest that we present the sections that are complete and clearly communicate which parts are still under development. Please let me know your thoughts on this approach.\n",
       "\n",
       "Thank you for your attention.\n",
       "\n",
